@@ -134,6 +134,20 @@ static const char *gMediaTypes[] = {
 #define NUM_MEDIA_TYPES       69
 #define NUM_HTTP_HEADER_NAMES 33
 
+#define ASCTIME_R_BUFFER_SIZE 26
+#ifdef WIN32
+static char *web_server_asctime_r(const struct tm *tm, char *buf)
+{
+	if (tm == NULL || buf == NULL)
+		return NULL;
+
+	asctime_s(buf, ASCTIME_R_BUFFER_SIZE, tm);
+	return buf;
+}
+#else
+#define web_server_asctime_r asctime_r
+#endif
+
 /* sorted by file extension; must have 'NUM_MEDIA_TYPES' extensions */
 static const char *gEncodedMediaTypes =
 	"aif\0" AUDIO_STR "aiff\0"
@@ -515,6 +529,8 @@ static int get_file_info(
 	FILE *fp;
 	int rc = 0;
 	time_t aux_LastModified;
+	struct tm date;
+	char buffer[ASCTIME_R_BUFFER_SIZE];
 
 	UpnpFileInfo_set_ContentType(info, NULL);
 	code = stat(filename, &s);
@@ -539,7 +555,7 @@ static int get_file_info(
 		"file info: %s, length: %lld, last_mod=%s readable=%d\n",
 		filename,
 		(long long)UpnpFileInfo_get_FileLength(info),
-		asctime(gmtime(&aux_LastModified)),
+		web_server_asctime_r(http_gmtime_r(&aux_LastModified, &date), buffer),
 		UpnpFileInfo_get_IsReadable(info));
 
 	return rc;
